Fixed spacing of bulleted slides for 16:9 screens.

--- a/src/site/resources/styles/security-web-testing.css
+++ b/src/site/resources/styles/security-web-testing.css
@@ -286,6 +286,8 @@ a:focus {
 
 .slide-bulleted ul {
   list-style: disc;
+  margin-top: 50px;
+  margin-left: 50px;
 }
 
 .slide-bulleted ul li {
